--- a/pc_shop/apps/products/templates/products/includes/pagination.html
+++ b/pc_shop/apps/products/templates/products/includes/pagination.html
@@ -3,17 +3,25 @@
     <ul class="pagination justify-content-center">
         {% if page_obj.has_previous %}
             <li class="page-item">
-                <a class="page-link" href="?page={{ page_obj.previous_page_number }}" tabindex="-1">Назад</a>
+                <a class="page-link" href="?{% url_replace page=page_obj.previous_page_number %}" tabindex="-1">Назад</a>
             </li>
         {% endif %}
+
         {% for num in page_obj.paginator.page_range %}
-            <li class="page-item {% if num == page_obj.number %}active{% endif %}">
-                <a class="page-link" href="?page={{ num }}">{{ num }}</a>
-            </li>
+            {% if page_obj.number == num %}
+                <li class="page-item active" aria-current="page">
+                    <span class="page-link">{{ num }}</span>
+                </li>
+            {% else %}
+                <li class="page-item">
+                    <a class="page-link" href="?{% url_replace page=num %}">{{ num }}</a>
+                </li>
+            {% endif %}
         {% endfor %}
+
         {% if page_obj.has_next %}
             <li class="page-item">
-                <a class="page-link" href="?page={{ page_obj.next_page_number }}">Вперед</a>
+                <a class="page-link" href="?{% url_replace page=page_obj.next_page_number %}">Вперед</a>
             </li>
         {% endif %}
     </ul>
